--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -26,16 +26,13 @@
 
 </head>
   <body>
-    <p>Log In with User Name and Password</p>
+    <p><h1>Forgot Your Password</h1></p>
+    <p>Enter your email below so that we can send you a link where to reset your  password</p>
 
-<input type="text" class="" id="" placeholder="User Name">
-<p><a href="forgotpassword.html">I forgot my password</a></p>
-<input type="text" class="" id="" placeholder="password"><br><br>
-<p><input type="submit" class="" id="" value="Sign In">
-<span>Stay logged in:<input type="checkbox" class="" id=""></span></p>
-<p>or login with social media</p>
-<img src=""><img src=""><img src="">
-<p>Do not have an account:    <a href="register.html">Sign Up</a></p>
+
+<input type="text" class="" id="" placeholder="Enter Your Email"><br><br>
+<p><input type="submit" class="" id="" value="Submit">
+
 
 
 
