--- a/register.html
+++ b/register.html
@@ -26,16 +26,24 @@
 
 </head>
   <body>
-    <p>Log In with User Name and Password</p>
+    <p><h1>Sign Up to Register</h1></p>
 
-<input type="text" class="" id="" placeholder="User Name">
-<p><a href="forgotpassword.html">I forgot my password</a></p>
-<input type="text" class="" id="" placeholder="password"><br><br>
-<p><input type="submit" class="" id="" value="Sign In">
-<span>Stay logged in:<input type="checkbox" class="" id=""></span></p>
-<p>or login with social media</p>
-<img src=""><img src=""><img src="">
-<p>Do not have an account:    <a href="register.html">Sign Up</a></p>
+<p><input type="text" class="" id="" placeholder="Last Name"></p>
+<p><input type="text" class="" id="" placeholder="First Name"></p>
+<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
+<p>Enter Password again</p>
+<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
+<p><input type="text" class="" id="" placeholder="User Name"></p>
+<p>Enter User Name again</p>
+<p><input type="text" class="" id="" placeholder="User Name"></p>
+<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
+<p>Enter Mobile Number again</p>
+<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
+<p><input type="text" class="" id="" placeholder="enter email"></p>
+<p>Sex:</p>
+<p>Male:  <input type="checkbox" class="" id="">Female:  <input type="checkbox" class="" id=""></p>
+<p><input type="submit" class="" id="" value="Submit">
+
 
 
 
