--- a/bookappointment.html
+++ b/bookappointment.html
@@ -30,10 +30,18 @@
 
 <p><input type="text" class="" id="" placeholder="Full Name"></p>
 <p><input type="text" class="" id="" placeholder="User Name"></p>
-<p>Service needed: <select><option value="0">laundary</option><option>tailor</option><option>alteration</option></select></p>
+<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
 <input type="text" class="" id="" placeholder="password"><br><br>
-<p><input type="submit" class="" id="" value="Submit">
-<span>Stay logged in:<input type="checkbox" class="" id=""></span></p>
+<p>Service needed: <select><option value="0">laundary</option><option>tailor</option><option>alteration</option></select></p>
+
+
+<p><span>Tailor:<input type="checkbox" class="" id=""></span>
+<span>Alteration:<input type="checkbox" class="" id=""></span>
+<span>Laundary:<input type="checkbox" class="" id=""></span></p>
+<span>Total Cost:<input type="text" class="" id=""></span></p>
+<p>Type of payment: <select><option value="0">Mobile money</option><option>ezwich</option><option>bank</option></select></p>
+
+<p><input type="submit" class="" id="" value="Submit"></p>
 <p>or login with social media</p>
 <img src=""><img src=""><img src="">
 <p>Do not have an account:    <a href="register.html">Sign Up</a></p>
