--- a/bookappointment.html
+++ b/bookappointment.html
@@ -38,6 +38,7 @@
 <p><span>Tailor:<input type="checkbox" class="" id=""></span>
 <span>Alteration:<input type="checkbox" class="" id=""></span>
 <span>Laundary:<input type="checkbox" class="" id=""></span></p>
+<span><input type="text" class="" id="" placeholder="Enter number of Items"></span></p>
 <span>Total Cost:<input type="text" class="" id=""></span></p>
 <p>Type of payment: <select><option value="0">Mobile money</option><option>ezwich</option><option>bank</option></select></p>
 
