--- a/dropdownmenu.html
+++ b/dropdownmenu.html
@@ -26,34 +26,33 @@
 
 </head>
   <body>
-    <p><h1>Sign Up to Register</h1></p>
-
-<p><input type="text" class="" id="" placeholder="Last Name"></p>
-<p><input type="text" class="" id="" placeholder="First Name"></p>
-<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
-<p>Enter Password again</p>
-<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
-<p><input type="text" class="" id="" placeholder="User Name"></p>
-<p>Enter User Name again</p>
-<p><input type="text" class="" id="" placeholder="User Name"></p>
-<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
-<p>Enter Mobile Number again</p>
-<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
-<p><input type="text" class="" id="" placeholder="enter email"></p>
-<p>Sex:</p>
-<p>Male:  <input type="radio" value="male" class="" id="" >Female:  <input type="radio" value="female"class="" id=""></p>
-<p><input type="checkbox" class="" id="" ><a href="">I understand Terms and Conditions</a></p>
-<p><input type="submit" class="" id="" value="Submit">
 
 
 
+ <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">TAPE CHOICES
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a href="#">SERVICE TYPE</a></li>
+    <li><a href="#">PRICE RANCE</a></li>
+    <li><a href="#">EXPERIENCE LEVEL</a></li>
+    <li><a href="#">REGION</a></li>
+  </ul>
+</div> 
+<div class="dropdown"  >
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">SERVICE TYPE
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a href="#">SERVICE TYPE</a></li>
+    <li><a href="#">PRICE RANCE</a></li>
+    <li><a href="#">EXPERIENCE LEVEL</a></li>
+    <li><a href="#">REGION</a></li>
+  </ul>
+</div> 
 
 
 
-
-
-
-
+    
 
 
 
