--- a/howitworks.html
+++ b/howitworks.html
@@ -26,24 +26,18 @@
 
 </head>
   <body>
-    <p><h1>Sign Up to Register</h1></p>
+    <p><h1>How it Works for Users</h1></p>
+    
+    <p><h3>This is what you have to do as our cherished valued client of tape:</h3></p>
+    <p><h3>In order to find a tailor , a dry cleaner or do alterations follow these steps: </h3></p>
+    <p><h3>1. Go to <a href="index.html">sign up page</a> to register</h3></p>
+    <p><h3>2. Go to <a href="bookappointment.html">Book appointments</a> to select a service(s) you want</h3></p>
+    <p><h3>3.Make your payments</h3></p>
+    <p><h3>4.Receive a confirmation message</h3></p>
+    <p><h3>5.Journey to your chosen tape on the appointed date with your items or </h3></p>
+    <p><h3>6.Notify us with your location for our men to come for your items</h3></p>
+    <p><h3>7.Get your service done</h3></p>
 
-<p><input type="text" class="" id="" placeholder="Last Name"></p>
-<p><input type="text" class="" id="" placeholder="First Name"></p>
-<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
-<p>Enter Password again</p>
-<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
-<p><input type="text" class="" id="" placeholder="User Name"></p>
-<p>Enter User Name again</p>
-<p><input type="text" class="" id="" placeholder="User Name"></p>
-<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
-<p>Enter Mobile Number again</p>
-<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
-<p><input type="text" class="" id="" placeholder="enter email"></p>
-<p>Sex:</p>
-<p>Male:  <input type="radio" value="male" class="" id="" >Female:  <input type="radio" value="female"class="" id=""></p>
-<p><input type="checkbox" class="" id="" ><a href="">I understand Terms and Conditions</a></p>
-<p><input type="submit" class="" id="" value="Submit">
 
 
 
