--- a/bookappointment.html
+++ b/bookappointment.html
@@ -26,26 +26,30 @@
 
 </head>
   <body>
-    <p>Book an apppointment</p>
+    <p><h2>Book an apppointment</h2></p>
 
 <p><input type="text" class="" id="" placeholder="Full Name"></p>
 <p><input type="text" class="" id="" placeholder="User Name"></p>
 <p><input type="text" class="" id="" placeholder="Mobile Number"></p>
 <input type="text" class="" id="" placeholder="password"><br><br>
-<p>Service needed: <select><option value="0">laundary</option><option>tailor</option><option>alteration</option></select></p>
+<p>Service needed:<!-- <select><option value="0">laundary</option><option>tailor</option><option>alteration</option></select></p> -->
 
 
 <p><span>Tailor:<input type="checkbox" class="" id=""></span>
 <span>Alteration:<input type="checkbox" class="" id=""></span>
 <span>Laundary:<input type="checkbox" class="" id=""></span></p>
 <span><input type="text" class="" id="" placeholder="Enter number of Items"></span></p>
-<span>Total Cost:<input type="text" class="" id=""></span></p>
+<span> Cost:<input type="text" class="" id=""></span></p>
 <p>Type of payment: <select><option value="0">Mobile money</option><option>ezwich</option><option>bank</option></select></p>
+<p><span>Date:<input type="date" class="" id=""></span>
 
 <p><input type="submit" class="" id="" value="Submit"></p>
 <p>or login with social media</p>
 <img src=""><img src=""><img src="">
 <p>Do not have an account:    <a href="register.html">Sign Up</a></p>
+
+    
+
 
 
 
