--- a/merchantregisteration.html
+++ b/merchantregisteration.html
@@ -26,7 +26,9 @@
 
 </head>
   <body>
-    <p><h1>Sign Up to Register</h1></p>
+       <p><h1> Merchant Registeration</h1></p>
+    <p><h1>Sign Up to Register As a Merchant</h1></p>
+    <p>Upload Image<input type="file" class="" id="" ></p>
 
 <p><input type="text" class="" id="" placeholder="Last Name"></p>
 <p><input type="text" class="" id="" placeholder="First Name"></p>
@@ -40,6 +42,12 @@
 <p>Enter Mobile Number again</p>
 <p><input type="text" class="" id="" placeholder="Mobile Number"></p>
 <p><input type="text" class="" id="" placeholder="enter email"></p>
+<p><input type="text" class="" id="" placeholder="Bankers"></p>
+<p><input type="text" class="" id="" placeholder="Bank Account"></p>
+<p><input type="text" class="" id="" placeholder="Location of Business"></p>
+<p><input type="text" class="" id="" placeholder="Working Days"></p>
+<p><input type="text" class="" id="" placeholder="Opening Time"></p>
+<p><input type="text" class="" id="" placeholder="Closing Time"></p>
 <p>Sex:</p>
 <p>Male:  <input type="radio" value="male" class="" id="" >Female:  <input type="radio" value="female"class="" id=""></p>
 <p><input type="checkbox" class="" id="" ><a href="">I understand Terms and Conditions</a></p>
