--- a/productview.html
+++ b/productview.html
@@ -26,24 +26,17 @@
 
 </head>
   <body>
-    <p><h1>Sign Up to Register</h1></p>
+    <p>Produc View</p>
+    <p>Image <input type="file" class="" id="" ></p>
+    <img src=""><img src=""><img src="">
 
-<p><input type="text" class="" id="" placeholder="Last Name"></p>
-<p><input type="text" class="" id="" placeholder="First Name"></p>
-<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
-<p>Enter Password again</p>
-<p><input type="text" class="" id="" placeholder="password more than six characters"></p>
-<p><input type="text" class="" id="" placeholder="User Name"></p>
-<p>Enter User Name again</p>
-<p><input type="text" class="" id="" placeholder="User Name"></p>
-<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
-<p>Enter Mobile Number again</p>
-<p><input type="text" class="" id="" placeholder="Mobile Number"></p>
-<p><input type="text" class="" id="" placeholder="enter email"></p>
-<p>Sex:</p>
-<p>Male:  <input type="radio" value="male" class="" id="" >Female:  <input type="radio" value="female"class="" id=""></p>
-<p><input type="checkbox" class="" id="" ><a href="">I understand Terms and Conditions</a></p>
-<p><input type="submit" class="" id="" value="Submit">
+
+<p>Price: <input type="text" class="" id="" value="price tag">
+  <div class="rating">
+<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+</div>
+
+
 
 
 
