--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
     <!-- Begin category cta section -->
     <section class="hero-cta">
     <div class="container">
-      <div class="form-group hero-txt col-md-3">
+      <div class="hero-txt col-md-3">
         <!-- <h2>Find a Tailor</h2> -->
+        <form>
         <div class="form-group">
         <input type="text" class="form-control" placeholder="enter a search keyword">
+        <small id="emailHelp" class="form-text text-muted">"Tailor in kasoa"</small>
         </div>
         <div class="form-group">
         <select class="form-control">
@@ -67,19 +69,25 @@
           <option>Kumasi</option>
         </select>
       </div>
+      <button type="submit" class="btn btn-outline-success btn-block">Submit</button>
     </div>
+  </form>
   </div>
   </section>
 
-  <section class="category">
-    <div class="unit">
-    <div class="row">
-      <div class="col col-md-8 no-gutters">
-      <a href="#"><img src="images/800x400h.jpg" width="800px" height="400px" /><h5>Alterations</h5></a>
-      <a href="#"><img src="images/800x400e.jpg" width="800px" height="400px" /><h5>Laundry&Cleaning</h5></a>
+  <section class="sc-category">
+    <div class="w-100">
+    <div class="row no-gutters">
+      <div class="col col-sm-8">
+        <div class="col-6 col-sm-6 no-gutters">
+        <a href="#"><img src="images/800x400h.jpg" width="800px" height="400px" /><h5>Alterations</h5></a>
       </div>
+      <div class="col-6 col-sm-6 no-gutters">
+        <a href="#"><img src="images/800x400e.jpg" width="800px" height="400px" /><h5>Laundry&Cleaning</h5></a>
+      </div>
+    </div>
 
-      <div class="col-6 col-md-4">
+      <div class="col-6 col-sm-4 no-gutters">
       <a href="#"><img src="images/533x800.jpg" width="500px" height="800px" /><h5>Bespoke</h5></a>
       </div>
     </div>
@@ -96,26 +104,27 @@
           <h4>A brief explanation about how it works</h4>
         </div>
 
-    <div class="row text-center">
-    <div class="col col-md-3">
+    <div class="row justify-content-center clearance">
+    <div class="col-6 col-sm-3">
       <ion-icon class="ion-wifi"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
 
 
-    <div class="col col-md-3">
+    <div class="col-6 col-sm-3">
+      <ion-icon class="ion-wifi"></ion-icon>
+      <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
+    </div>
+
+    <div class="clearfix hidden-sm-up"></div><!-- bootstrap-4 clearfix directive for columns in smaller devices -->
+
+    <div class="col-6 col-sm-3">
       <ion-icon class="ion-wifi"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
 
 
-    <div class="col col-md-3">
-      <ion-icon class="ion-wifi"></ion-icon>
-      <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
-    </div>
-
-
-    <div class="col col-md-3">
+    <div class="col-6 col-sm-3">
       <ion-icon class="ion-wifi"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
@@ -133,22 +142,23 @@
       <h4>Find service offers that can help you maximize productivity</h4>
     </div>
 
-  <div class="container">
-    <div class="card-group">
+  <div class="row clearance">
+    <div class="card-deck">
     <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
+      <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x181" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Laundry offer</h4>
-        <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
+        <p class="card-text">Get your favorite vintage shirts delivered to you at ...</p>
+        <small class="text-left">East Legon, Accra</small> <small class="text-muted justify-content-sm-end">East Accra</small>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <small class="text-muted">Vintage Tailors</small>
       </div>
     </div>
 
     <!-- Start new card -->
       <div class="card">
-        <img class="card-img-top" src="..." alt="Tailor offer">
+        <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x180" alt="Tailor offer">
         <div class="card-block">
           <h4 class="card-title">5 Shirts Offer</h4>
           <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
@@ -159,40 +169,26 @@
       </div>
       <!-- End the card -->
 
-      <!-- Start new card -->
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Tailor offer">
-          <div class="card-block">
-            <h4 class="card-title">5 Shirts Offer</h4>
-            <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
-          </div><!-- End div card block -->
-          <div class="card-footer">
-            <small class="text-muted">Vintage Tailors</small>
-          </div>
-        </div>
-        <!-- End the card -->
-
-
     <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
+      <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x182" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Alterations </h4>
         <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <small class="text-muted">Vintage Tailors</small>
       </div>
     </div>
 
 
     <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
+      <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x183" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Bespoke Offer</h4>
         <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <small class="text-muted">Vintage Tailors</small>
       </div>
     </div>
   </div>
@@ -215,18 +211,24 @@
             <div class="carousel-inner row w-100 mx-auto" role="listbox">
               <!-- First Testimonial -->
               <div class="carousel-item col col-12 active">
-                <div class="col col-md-6">
-                    <img class="img-responsive mx-auto d-block" src="//placehold.it/600x400?text=2" alt="slide 0">
+                <div class="col col-md-6 no-gutters">
+                    <img class="img-fluid mx-auto d-block" src="//source.unsplash.com/collection/119940/600x400" alt="slide 0">
                 </div>
-                <div class="col col-md-6">
-                    <img class="img-responsive mx-auto d-block" src="//placehold.it/600x400?text=3" alt="slide 1">
+                <div class="col col-md-6 d-flex h-50 align-items-center">
+                  <blockquote class="blockquote blockquote-reverse">
+                  <h3 class="mb-0"><span class="">Simplify Your Needs</span></h3>
+                    <p class="mb-0 align-middle">The work is so professional,it's <span class="desktop-br"></span>really amazing.</p>
+                      <footer class="blockquote-footer">Irina Lebedeva, Website Developer</footer>
+                    </blockquote>
+
+
                 </div>
               </div>
 
               <!-- Second Testimonial -->
               <div class="carousel-item col-md-12">
                 <div class="col col-md-6">
-                   <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=02" alt="slide 2">
+                   <img class="img-fluid mx-auto d-block" src="//source.unsplash.com/collection/119940/601x400" alt="slide 2">
                </div>
                <div class="col col-md-6">
                    <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=03" alt="slide 3">
@@ -236,7 +238,7 @@
               <!-- Third Testimonial -->
              <div class="carousel-item col-md-12">
                <div class="col col-md-6">
-                   <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=4" alt="slide 4">
+                   <img class="img-fluid mx-auto d-block" src="//source.unsplash.com/collection/119940/600x400" alt="slide 4">
                </div>
                <div class="col col-md-6">
                    <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=5" alt="slide 5">
@@ -259,9 +261,9 @@
 
 
   <!-- Begin the pre footer call to action section -->
-  <section class="pre-footer clearance">
+  <!-- <section class="pre-footer clearance">
     <div class="container-fluid">
-    <div class="row no-gutter text-center">
+    <div class="row no-gutters text-center">
       <div class="col col-md-4">
         <p>Hello World</p>
       </div>
@@ -274,6 +276,34 @@
         <p>Hello World</p>
       </div>
     </div>
+  </section> -->
+
+
+  <section class="">
+    <div class="card-group">
+      <div class="card">
+        <img class="card-img-top" src="//source.unsplash.com/collection/906559/401x401" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">News/Press</h4>
+          <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="//source.unsplash.com/collection/906559/400x400" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Additional Support</h4>
+          <!-- <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p> -->
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="//source.unsplash.com/collection/906559/402x402" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Chat/Support</h4>
+          <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p> -->
+        </div>
+      </div>
+    </div>
+
   </section>
 
 
@@ -286,12 +316,12 @@
                     <div class="row ">
                       <div class="col col-3">
                         <div class="footer-logo ">
-                          <a href="https://propercloth.com/">
-                            <img src="https://propercloth.com/images/white/PCScissors.png" width="115">
+                          <a href="/">
+                            <img src="images/tape_bw_120.png">
                           </a>
                         </div>
-                        Proper Cloth
-                        <br> 495 Broadway
+                      Tailor Sync
+                        <br> 4425 Broadway
                         <br> New York, NY 10012
 
                         <div class="title">About Us</div>
