3nd initial Comit

--- a/merchantcontentpage.html
+++ b/merchantcontentpage.html
@@ -34,7 +34,7 @@
 If you want to be in touch with the real fashion authorities and not just the brand then we overly have the  products . God's Love Master Tailors is built and maintained by two former titans in the fashion industry. Our main goal is to keep you in the know about the fashion world. With that, you’re much much more  assured that you’re getting nothing less than what will help you and guide you to dress up to impress and express yourself.</p>
 
 <p> Our opening hours are from: 8:00 </p>
-<p>Our break time             : !2:00pm</p>
+<p>Our break time             : 2:00pm</p>
 <p>Our closing hours are      : 10:00pm</p>
 <p>Our services: 1. Fashion consultancy 2. alterations 3. Fashion design</p>
 <!--am an example shop description
