--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <!-- Load Basic Assets (CSS) Files
   ======================================== -->
+  <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap-reboot.css" /> -->
@@ -52,8 +53,8 @@
 
     <!-- Begin category cta section -->
     <section class="hero-cta">
-    <div class="container">
-      <div class="hero-txt col-md-3">
+    <div class="container-fluid">
+      <div class="hero-txt col col-6 h-100 align-middle align-items-center">
         <!-- <h2>Find a Tailor</h2> -->
         <form>
         <div class="form-group">
@@ -75,20 +76,22 @@
   </div>
   </section>
 
+
+
   <section class="sc-category">
-    <div class="w-100">
+    <div class="h-100">
     <div class="row no-gutters">
-      <div class="col col-sm-8">
-        <div class="col-6 col-sm-6 no-gutters">
-        <a href="#"><img src="images/800x400h.jpg" width="800px" height="400px" /><h5>Alterations</h5></a>
+      <div class="col col-sm-6 col-lg-6 unit">
+        <div class="no-gutters">
+        <a href="javascript:void(0)"><img class="arf" src="images/800x400h.jpg" width="800px" height="400px" /><h5>Alterations</h5></a>
       </div>
-      <div class="col-6 col-sm-6 no-gutters">
+      <div class="no-gutters">
         <a href="#"><img src="images/800x400e.jpg" width="800px" height="400px" /><h5>Laundry&Cleaning</h5></a>
       </div>
     </div>
 
-      <div class="col-6 col-sm-4 no-gutters">
-      <a href="#"><img src="images/533x800.jpg" width="500px" height="800px" /><h5>Bespoke</h5></a>
+      <div class="col-6 col-sm-6 col-lg-6 no-gutters unit h-100">
+      <a href="#"><img src="images/man.jpg"  height="800px" /><h5>Bespoke</h5></a>
       </div>
     </div>
   </div>
@@ -105,27 +108,27 @@
         </div>
 
     <div class="row justify-content-center clearance">
-    <div class="col-6 col-sm-3">
-      <ion-icon class="ion-wifi"></ion-icon>
+    <div class="col-6 col-md-3 htworks_content ">
+      <ion-icon class="ion-ios-barcode-outline"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
 
 
-    <div class="col-6 col-sm-3">
-      <ion-icon class="ion-wifi"></ion-icon>
+    <div class="col-6 col-md-3 htworks_content ">
+      <ion-icon class="ion-ios-briefcase-outline"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
 
     <div class="clearfix hidden-sm-up"></div><!-- bootstrap-4 clearfix directive for columns in smaller devices -->
 
-    <div class="col-6 col-sm-3">
-      <ion-icon class="ion-wifi"></ion-icon>
+    <div class="col-6 col-md-3 htworks_content ">
+      <ion-icon class="ion-ios-chatboxes-outline"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
 
 
-    <div class="col-6 col-sm-3">
-      <ion-icon class="ion-wifi"></ion-icon>
+    <div class="col-6 col-md-3 htworks_content ">
+      <ion-icon class="ion-ios-checkmark-outline"></ion-icon>
       <p class="htw-text">Get connected to the internet visit tailor sync and browse from the catalog of feature available on our platform</p>
     </div>
 
@@ -142,53 +145,56 @@
       <h4>Find service offers that can help you maximize productivity</h4>
     </div>
 
-  <div class="row clearance">
+  <div class="container clearance">
     <div class="card-deck">
     <div class="card">
       <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x181" alt="Card image cap">
       <div class="card-block">
-        <h4 class="card-title">Laundry offer</h4>
+        <h4 class="card-title">Laundry offer<span>GHC 10</span></h4>
         <p class="card-text">Get your favorite vintage shirts delivered to you at ...</p>
-        <small class="text-left">East Legon, Accra</small> <small class="text-muted justify-content-sm-end">East Accra</small>
+        <small class="text-left">East Legon, Accra <span class="catalog_cite justify-content-sm-end">East Accra</span></small>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Vintage Tailors</small>
+        <small class="catalog_cite">Vintage Tailors</small>
       </div>
     </div>
 
     <!-- Start new card -->
       <div class="card">
-        <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x180" alt="Tailor offer">
+        <img class="card-img-top w-100" src="images/tailx.jpg" alt="Tailor offer">
         <div class="card-block">
           <h4 class="card-title">5 Shirts Offer</h4>
           <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
+          <small class="text-left">East Legon, Accra <span class="catalog_cite justify-content-sm-end">East Accra</span></small>
         </div><!-- End div card block -->
         <div class="card-footer">
-          <small class="text-muted">Vintage Tailors</small>
+          <small class="catalog_cite">Vintage Tailors</small>
         </div>
       </div>
       <!-- End the card -->
 
     <div class="card">
-      <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x182" alt="Card image cap">
+      <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x181" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Alterations </h4>
         <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
+        <small class="text-left">East Legon, Accra <span class="catalog_cite justify-content-sm-end">East Accra</span></small>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Vintage Tailors</small>
+        <small class="catalog_cite">Vintage Tailors</small>
       </div>
     </div>
 
 
     <div class="card">
-      <img class="card-img-top" src="//source.unsplash.com/collection/474017/256x183" alt="Card image cap">
+      <img class="card-img-top w-100" src="images/tailxx.jpg" alt="Card image cap">
       <div class="card-block">
         <h4 class="card-title">Bespoke Offer</h4>
         <p class="card-text">Get your favorite vintage shirts delivered to you at ... </p>
+        <small class="text-left">East Legon, Accra <span class="catalog_cite justify-content-sm-end">East Accra</span></small>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Vintage Tailors</small>
+        <small class="catalog_cite">Vintage Tailors</small>
       </div>
     </div>
   </div>
@@ -199,7 +205,7 @@
 
 
   <!-- Start user reviews section on Bootstrap Carousels -->
-  <section class="testimonial clearance">
+  <section class="testimonial">
     <div class="container-fluid">
         <div id="carouselTestimonial" class="carousel slide" data-ride="carousel" data-interval="9000">
           <ol class="carousel-indicators" style="bottom:0%;">
@@ -212,36 +218,42 @@
               <!-- First Testimonial -->
               <div class="carousel-item col col-12 active">
                 <div class="col col-md-6 no-gutters">
-                    <img class="img-fluid mx-auto d-block" src="//source.unsplash.com/collection/119940/600x400" alt="slide 0">
+                    <img class="img-fluid mx-auto d-block testimonial__image" src="images/testimonial/buyer1.jpg" alt="slide 0">
                 </div>
-                <div class="col col-md-6 d-flex h-50 align-items-center">
+                <div class="col col-md-6 d-flex h-75 align-items-center">
                   <blockquote class="blockquote blockquote-reverse">
-                  <h3 class="mb-0"><span class="">Simplify Your Needs</span></h3>
-                    <p class="mb-0 align-middle">The work is so professional,it's <span class="desktop-br"></span>really amazing.</p>
-                      <footer class="blockquote-footer">Irina Lebedeva, Website Developer</footer>
-                    </blockquote>
-
-
+                    <h3 class="mb-0"><span class="">Best Service to Find Tailors</span></h3>
+                      <p class="mb-0 align-middle">The work is so professional,it's <span class="desktop-br"></span>really amazing.</p>
+                        <footer class="blockquote-footer">Andrew mark, Senior Lecturer</footer>
+                  </blockquote>
                 </div>
               </div>
 
               <!-- Second Testimonial -->
               <div class="carousel-item col-md-12">
                 <div class="col col-md-6">
-                   <img class="img-fluid mx-auto d-block" src="//source.unsplash.com/collection/119940/601x400" alt="slide 2">
+                   <img class="img-fluid mx-auto d-block testimonial__image" src="images/testimonial/buyer2.jpg" alt="slide 2">
                </div>
-               <div class="col col-md-6">
-                   <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=03" alt="slide 3">
+               <div class="col col-md-6 d-flex h-75 align-items-center">
+                 <blockquote class="blockquote blockquote-reverse">
+                   <h3 class="mb-0"><span class="">Best Bespoke Service</span></h3>
+                     <p class="mb-0 align-middle">The work is so professional,it's <span class="desktop-br"></span>really amazing.</p>
+                       <footer class="blockquote-footer">Irina Lebedeva, Community Evangelist Developer</footer>
+                 </blockquote>
                </div>
              </div>
 
               <!-- Third Testimonial -->
              <div class="carousel-item col-md-12">
                <div class="col col-md-6">
-                   <img class="img-fluid mx-auto d-block" src="//source.unsplash.com/collection/119940/600x400" alt="slide 4">
+                   <img class="img-fluid mx-auto d-block testimonial__image" src="images/testimonial/buyer3.jpg" alt="slide 4">
                </div>
-               <div class="col col-md-6">
-                   <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=5" alt="slide 5">
+               <div class="col col-md-6  d-flex h-75 align-items-center">
+                 <blockquote class="blockquote blockquote-reverse">
+                   <h3 class="mb-0"><span class="">Quality Premium Offers</span></h3>
+                     <p class="mb-0 align-middle">The work is so professional,it's <span class="desktop-br"></span>really amazing.</p>
+                       <footer class="blockquote-footer">Irina Lebedeva, Community Evangelist Developer</footer>
+                 </blockquote>
                </div>
              </div>
             </div><!-- End carousel inner clas with row w-100 -->
@@ -260,28 +272,11 @@
 
 
 
-  <!-- Begin the pre footer call to action section -->
-  <!-- <section class="pre-footer clearance">
-    <div class="container-fluid">
-    <div class="row no-gutters text-center">
-      <div class="col col-md-4">
-        <p>Hello World</p>
-      </div>
-
-      <div class="col col-md-4">
-        <p>Hello World</p>
-      </div>
-
-      <div class="col col-md-4">
-        <p>Hello World</p>
-      </div>
-    </div>
-  </section> -->
 
 
-  <section class="">
+  <section class="pre-footer">
     <div class="card-group">
-      <div class="card">
+      <div class="card pre-footer_card">
         <img class="card-img-top" src="//source.unsplash.com/collection/906559/401x401" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">News/Press</h4>
@@ -310,7 +305,7 @@
 
 
     <!-- Dont forget to assign style property to display block for footer anchor elements -->
-    <footer class="clearance footer">
+    <footer class="clearance d-block footer">
                   <div class="container">
 
                     <div class="row ">
