add catalog page, register and login html layout

--- a/index.html
+++ b/index.html
@@ -28,27 +28,39 @@
 </head>
   <body>
 
-<!-- Start markup for website navigation section -->
-    <nav class="navbar navbar-inverse navbar-toggleable-md fixed-top" role="navigation">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-target="#navbarToggleMenu" data-toggle="collapse" aria-label="Toggle navigation">
-        <span class="ion-drag"></span>
-      </button>
-      <a class="navbar-brand" href="#">tape/s</a>
-      <div class="collapse navbar-collapse" id="navbarToggleMenu">
-        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-          <li class="nav-item active"><a class="nav-link" href="#">home<span class="sr-only">(current)</span></a></li>
-          <li class="nav-item"><a class="nav-link" href="#">catalog <ion-icon class="ion-android-arrow-dropdown-circle"></ion-icon></a></li>
-          <li class="nav-item"><a class="nav-link" href="#">men</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">women</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">login</a></li>
+    <!-- Start markup for website navigation section -->
+        <nav class="navbar navbar-inverse navbar-toggleable-md fixed-top" role="navigation">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-target="#navbarToggleMenu" data-toggle="collapse" aria-label="Toggle navigation">
+            <span class="ion-drag"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">tape/s</a>
+          <div class="collapse navbar-collapse" id="navbarToggleMenu">
+            <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+              <li class="nav-item active"><a class="nav-link" href="#">home<span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a class="nav-link" href="catalog.html">catalog <ion-icon class="ion-android-arrow-dropdown-circle"></ion-icon></a></li>
+              <li class="nav-item"><a class="nav-link" href="#">men</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">women</a></li>
+            </ul>
+            <ul class="navbar-nav" style="padding-right:20px;">
+          <li class="nav-item"><a class="nav-link" href="register.html">register</a></li>
+          <li class="nav-item"><a class="nav-link" href="login.html">login</a></li>
         </ul>
         <!-- <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form> -->
-      </div>
-    </nav>
-    <!-- End Navigation section markup -->
+        </div>
+      </nav>
+        <!-- End Navigation section markup -->
+
+
+
+
+
+
+
+
+
 
 
     <!-- Begin category cta section -->
