some minor changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Begin category cta section -->
     <section class="hero-cta">
     <div class="container-fluid">
-      <div class="hero-txt col col-6 h-100 align-middle align-items-center">
+      <div class="hero-txt col col-sm-6 col-md-6 h-100 align-middle align-items-center">
         <!-- <h2>Find a Tailor</h2> -->
         <form>
         <div class="form-group">
@@ -93,7 +93,7 @@
   <section class="sc-category">
     <div class="h-100">
     <div class="row no-gutters">
-      <div class="col col-sm-6 col-lg-6 unit">
+      <div class="col col-sm-12 col-lg-6 unit">
         <div class="no-gutters">
         <a href="javascript:void(0)"><img class="arf" src="images/800x400h.jpg" width="800px" height="400px" /><h5>Alterations</h5></a>
       </div>
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-      <div class="col-6 col-sm-6 col-lg-6 no-gutters unit h-100">
+      <div class="col-6 col-sm-12 col-lg-6 no-gutters unit h-100">
       <a href="#"><img src="images/man.jpg"  height="800px" /><h5>Bespoke</h5></a>
       </div>
     </div>
@@ -321,7 +321,7 @@
                   <div class="container">
 
                     <div class="row ">
-                      <div class="col col-3">
+                      <div class="col col-sm-6 col-md-3">
                         <div class="footer-logo ">
                           <a href="/">
                             <img src="images/tape_bw_120.png">
@@ -343,7 +343,7 @@
                         <hr width="1" size="400px">
                       </div>
 
-                      <div class="col col-3 footer_nologo">
+                      <div class="col-sm-6 col-md-3 footer_nologo">
                         <div class="title">Shop</div>
                         <a rel="nofollow" href="//dress-shirt-gift-certificate">Gift Certificates</a>
                         <a rel="nofollow" href="//sizes">Create a Custom Size</a>
@@ -355,7 +355,7 @@
                         <a rel="nofollow" href="//accessories">Accessories</a> &nbsp;
                       </div>
 
-                      <div class="col col-3 footer_nologo">
+                      <div class="col-sm-6 col-md-3 footer_nologo">
                         <div class="title">Help</div>
                         <a rel="nofollow" href="//reference/ordering-fabric-samples/">Ordering Fabric Samples</a>
                         <a rel="nofollow" href="//reference/category/care/">How to Care for Shirts</a>
@@ -366,7 +366,7 @@
                         <a rel="nofollow" href="//shipping">Shipping &amp; Fast Delivery</a>
                       </div>
 
-                      <div class="col col-3 footer_nologo">
+                      <div class="col-sm-6 col-md-3 footer_nologo">
                         <div class="title">Support</div>
                         <a rel="nofollow" href="//dress-shirt-reviews">Customer Reviews</a>
                         <a rel="nofollow" href="//account/orders">Track an Existing Order</a>
